reference/k/snapshots/literals-true-literal.snap
---
source: crates/cadenza-compiler/test-data/semantics/literals-true-literal.cdz
---
# literals-true-literal

## Input

```cadenza
true
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 108 105 116 101 114 97 108 115 45 116 114 117 101 45 108 105 116 101 114 97 108 46 99 100 122) (Span (0 4) (Ident 116 114 117 101)))
```

## Expected

```
true : Bool
```

## K Output

```
<generatedTop>
  <k>
    true ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "crates/cadenza-compiler/test-data/semantics/literals-true-literal.cdz"
  </file>
  <span-start>
    0
  </span-start>
  <span-end>
    4
  </span-end>
</generatedTop>
```

