reference/k/snapshots/literals-zero.snap
---
source: crates/cadenza-compiler/test-data/semantics/literals-zero.cdz
---
# literals-zero

## Input

```cadenza
0
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 108 105 116 101 114 97 108 115 45 122 101 114 111 46 99 100 122) (Span (0 1) (Integer 0)))
```

## Expected

```
0 : Integer
```

## K Output

```
<generatedTop>
  <k>
    0 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , .Map )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/literals-zero.cdz"
  </file>
  <span-start>
    0
  </span-start>
  <span-end>
    1
  </span-end>
</generatedTop>
```

