reference/k/snapshots/variables-basic-shadowing.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-basic-shadowing.cdz
---
# variables-basic-shadowing

## Input

```cadenza
let x = 1
let x = 2
x
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 98 97 115 105 99 45 115 104 97 100 111 119 105 110 103 46 99 100 122) (Span (0 10) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 1))) (Span (10 20) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 2))) (Span (20 21) (Ident 120)))
```

## Expected

```
() : Unit
() : Unit
2 : Integer
```

## K Output

```
<generatedTop>
  <k>
    2 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "x" |-> 2 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/variables-basic-shadowing.cdz"
  </file>
  <span-start>
    20
  </span-start>
  <span-end>
    21
  </span-end>
</generatedTop>
```

