reference/k/snapshots/variables-identifier-pattern.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-identifier-pattern.cdz
---
# variables-identifier-pattern

## Input

```cadenza
let x = 42
x
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 105 100 101 110 116 105 102 105 101 114 45 112 97 116 116 101 114 110 46 99 100 122) (Span (0 11) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 42))) (Span (11 12) (Ident 120)))
```

## Expected

```
() : Unit
42 : Integer
```

## K Output

```
<generatedTop>
  <k>
    42 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "x" |-> 42 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/variables-identifier-pattern.cdz"
  </file>
  <span-start>
    11
  </span-start>
  <span-end>
    12
  </span-end>
</generatedTop>
```

