reference/k/snapshots/variables-identifier-with-underscores.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-identifier-with-underscores.cdz
---
# variables-identifier-with-underscores

## Input

```cadenza
let _private_var = 42
_private_var
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 105 100 101 110 116 105 102 105 101 114 45 119 105 116 104 45 117 110 100 101 114 115 99 111 114 101 115 46 99 100 122) (Span (0 22) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 95 112 114 105 118 97 116 101 95 118 97 114)) (Integer 42))) (Span (22 34) (Ident 95 112 114 105 118 97 116 101 95 118 97 114)))
```

## Expected

```
() : Unit
42 : Integer
```

## K Output

```
<generatedTop>
  <k>
    42 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "_private_var" |-> 42 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/variables-identifier-with-underscores.cdz"
  </file>
  <span-start>
    22
  </span-start>
  <span-end>
    34
  </span-end>
</generatedTop>
```

