reference/k/snapshots/variables-inner-scope-accesses-outer.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-inner-scope-accesses-outer.cdz
---
# variables-inner-scope-accesses-outer

## Input

```cadenza
let outer = 100
let result =
    let inner = 200
    inner + outer
result
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 105 110 110 101 114 45 115 99 111 112 101 45 97 99 99 101 115 115 101 115 45 111 117 116 101 114 46 99 100 122) (Span (0 16) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 111 117 116 101 114)) (Integer 100))) (Span (16 67) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 114 101 115 117 108 116)) (Apply (Synthetic 95 95 98 108 111 99 107 95 95) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 105 110 110 101 114)) (Integer 200)) (Apply (Op 43) (Ident 105 110 110 101 114) (Ident 111 117 116 101 114))))) (Span (67 73) (Ident 114 101 115 117 108 116)))
```

## Expected

```
() : Unit
300 : Integer
300 : Integer
```

## K Output

```
<generatedTop>
  <k>
    300 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "outer" |-> 100
    "result" |-> 300 )
    1 |-> scope ( 0 , "inner" |-> 200 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    2
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "crates/cadenza-compiler/test-data/semantics/variables-inner-scope-accesses-outer.cdz"
  </file>
  <span-start>
    67
  </span-start>
  <span-end>
    73
  </span-end>
</generatedTop>
```

