reference/k/snapshots/variables-let-binding-using-previous-binding.snap
---
source: crates/cadenza-compiler/test-data/semantics/variables-let-binding-using-previous-binding.cdz
---
# variables-let-binding-using-previous-binding

## Input

```cadenza
let x = 10
let y = x * 2
y
```

## AST

```lisp
(File (Path 99 114 97 116 101 115 47 99 97 100 101 110 122 97 45 99 111 109 112 105 108 101 114 47 116 101 115 116 45 100 97 116 97 47 115 101 109 97 110 116 105 99 115 47 118 97 114 105 97 98 108 101 115 45 108 101 116 45 98 105 110 100 105 110 103 45 117 115 105 110 103 45 112 114 101 118 105 111 117 115 45 98 105 110 100 105 110 103 46 99 100 122) (Span (0 11) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 120)) (Integer 10))) (Span (11 25) (Apply (Op 61) (Apply (Ident 108 101 116) (Ident 121)) (Apply (Op 42) (Ident 120) (Integer 2)))) (Span (25 26) (Ident 121)))
```

## Expected

```
() : Unit
() : Unit
20 : Integer
```

## K Output

```
<generatedTop>
  <k>
    20 ~> .K
  </k>
  <scopes>
    0 |-> scope ( -1 , "x" |-> 10
    "y" |-> 20 )
  </scopes>
  <current-scope>
    0
  </current-scope>
  <next-scope>
    1
  </next-scope>
  <store>
    .Map
  </store>
  <next-cell>
    0
  </next-cell>
  <output>
    .List
  </output>
  <file>
    "<repo>/crates/cadenza-compiler/test-data/semantics/variables-let-binding-using-previous-binding.cdz"
  </file>
  <span-start>
    25
  </span-start>
  <span-end>
    26
  </span-end>
</generatedTop>
```

